# uno-revive-rs

./: .gitmodules  Cargo.toml  PIPELINES.md  README.md
.cargo/: config.toml
.github/: BRANCHES.md
.github/workflows/: greetings.yml  rust.yml
doc/: Cargo.toml
elf/: m328p-sensors.rs
m2560-oled-shields/: Cargo.toml
m2560-oled-shields/.cargo/: config.toml
m2560-oled-shields/src/: m2560-shields.rs
m328p-i2c-displays/: Cargo.toml
m328p-i2c-displays/.cargo/: config.toml
m328p-i2c-displays/src/: m328p_i2c.rs
m328p-logger-b/: Cargo.toml
m328p-logger-b/src/: main.rs
m328p-sensors/: Cargo.toml
m328p-sensors-A/src/: main.rs
m328p-sensors-rs/: Cargo.toml
m328p-sensors-rs/src/: main.rs
m328p-sensors/.cargo/: config.toml
m328p-sensors/src/: m328p-sensors.rs  spi_feedback.rs  usart.rs
m328p-sunlight-rs/src/: main.rs
spec/avr-atmega328p/debug/.fingerprint/compiler_builtins-da25be84ee9ea6b6/: run-build-script-build-script-build  run-build-script-build-script-build.json
spec/avr-atmega328p/debug/.fingerprint/core-c27aeee3c45b9781/: output-lib-core
spec/avr-atmega328p/debug/.fingerprint/libc-33ea93bba7ce98f3/: run-build-script-build-script-build  run-build-script-build-script-build.json
spec/avr-atmega328p/debug/.fingerprint/std-a912d1ed47003fb5/: run-build-script-build-script-build  run-build-script-build-script-build.json
spec/avr-atmega328p/debug/.fingerprint/unwind-d956dd4091d2c060/: run-build-script-build-script-build  run-build-script-build-script-build.json
sunlight-sensor-m328p-B/: Cargo.toml
sunlight-sensor-m328p-B/src/: main.rs
