[workspace]
members = [
  "m328p-sensors",
  "m2560-oled-shields"
]
exclude = [
  "avr-hal",
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false
panic = "abort"

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false
panic = "abort"