[package]
name = "m2560-oled-shields"
version = "0.1.0"
authors = ["Ethan Gallucci <ethgallucci@gmail.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "m2560-oled-shields"
path = "src/m2560-shields.rs"
test = true
bench = true
harness = true

[dependencies]
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
path = "../avr-hal/arduino-hal"
features = ["arduino-uno"]