[package]
name = "m328p-i2c-displays"
version = "0.1.0"
authors = ["Ethan Gallucci <ethgallucci@gmail.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "m328p_i2c_displays"
path = "src/m328p_i2c.rs"
test = true
bench = true
harness = true

[dependencies]
ufmt = "0.1.0"

[dependencies.reviver-macros]
git = "https://github.com/ethgallucci/reviver-macros"
branch = "main"

[dependencies.arduino-hal]
git = "https://github.com/ethgallucci/avr-hal"
rev = "e897783"
features = ["arduino-uno"]
