[package]
name = "m328p-logger-b"
version = "0.1.0"
authors = ["ethgallucci <ethgallucci@gmail.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "m328p-logger-b"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
embedded-hal = "0.2.3"
embedded-sdmmc = "0.3.0"


[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "92d540c"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]

[profile.release]
panic = "abort"