[package]
name = "esp32-garden-rs"
version = "0.1.0"

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "1.0.0"
ufmt = "0.1.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "92d540c"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
