[package]
name = "m328p-sensors"
version = "0.1.0"
authors = ["Ethan Gallucci <ethgallucci@gmail.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "m328p-sensors"
path = "src/m328p-sensors.rs"
test = true
bench = true
harness = true

[dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
ufmt = "0.1.0"

[dependencies.arduino-hal]
git = "https://github.com/ethgallucci/avr-hal"
rev = "e897783"
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git = "https://github.com/ethgallucci/avr-hal"
rev = "e897783"
